--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,10 @@ body * {
 	@apply transition-all duration-200;
 }
 
+html {
+	overscroll-behavior: none;
+}
+
 @layer base {
 	::-webkit-scrollbar {
 		@apply w-2;
